# Virtual-Assis

./: README.md  pyproject.toml
Virtual_Assistant/: pyproject.toml
Virtual_Assistant/virtual_assistant/: body.py
Virtual_Assistant/virtual_assistant/Skills/: commands.py  formal.py  greetings.py  loud_clear.py  my_users.py  sites.py
