[tool.poetry]
name = "virtual-assistant"
version = "0.1.0"
description = ""
authors = ["RenePessoto <ra_pessoto@hotmail.com>"]
readme = "README.md"
packages = [{include = "virtual_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
